fix for footer alignment in firefox

--- a/views/main.sass
+++ b/views/main.sass
@@ -13,25 +13,21 @@ body
   width: 800px
   position: relative
 
-footer
-  background-color: #121632
+#footer
   border-top: 1px solid #3f2324
   padding: 30px 50px 40px 50px
   color: #674f5d
   font-size: 9px
   line-height: 14px
-
-footer span
-  display: block
-  float: left
-  width: 250px
-
-footer a
-  color: #9e8292
-  text-decoration: none
-
-footer a:hover
-  color: #ffffff
+  span
+    display: block
+    float: left
+    width: 250px
+  a
+    color: #9e8292
+    text-decoration: none
+  a:hover
+    color: #ffffff
 
 #profile, #personal
   position: absolute
